# CodeBridger

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  resource_quota.yaml
1_javascript_basics/: README.md  calculate_factorial.js  check_even_odd.js  check_number_positivity.js  check_prime_number.js  convert_temperature.js  find_circle_area.js  hello_world.js  print_right_angled_triangle.js  reverse_string.js  swap_numbers.js  variables.js
2_intermediate_javascript/: README.md  arrays_equal.js  car_details_printer.js  count_odd_numbers.js  max_and_min_elements.js  problems.md  remove_duplicates.js  sum_of_elements.js
3_advanced_javascript/: README.md
4_dsa_basics/: README.md
5_dsa_intermediate/: README.md
6_dsa_advanced/: README.md
Algorithm/: package.json
Backend/: README.md  REAMD.md
Backend/course_craft_lms/: main.py  pyproject.toml
Backend/course_craft_lms/database/: db_connection.py
Backend/course_craft_lms/models/: user_model.py
Backend/course_craft_lms/routes/: courses_routes.py  sections_routes.py  users_routes.py
Backend/course_craft_lms/schemas/: courses_schema.py  user_schema.py
DataStructure/: package.json
Data_Structures_Algorithms/: README.md  package-lock.json  package.json
Database/: README.md
Fundamentals/: README.md  control_structure.js  data_types.js  functions.js  loops.js  operators.js  variables.js
JavaScript_Advanced/: README.md  package-lock.json  package.json
JavaScript_Basics/: README.md  package.json
Javascript/: README.md  package.json
Math/: README.md  package-lock.json  package.json
React/: README.md
(+312 files in other folders)
