[tool.poetry]
name = "course-craft-lms"
version = "0.1.0"
description = "A software platform that helps create, deliver, track, and report on educational courses and training programs. It's like an all-in-one tool for managing the learning process."
authors = ["thesyscoder"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
